Inserindo Hibernate no Maven

--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,12 @@
   <groupId>br.com.janaina</groupId>
   <artifactId>br.com.janaina</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+  <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+	<dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-core</artifactId>
+	    <version>5.4.31.Final</version>
+	</dependency>
+  </dependencies>
 </project>
