--- a/.classpath
+++ b/.classpath
@@ -17,13 +17,8 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry excluding="teste/" kind="src" output="target/test-classes" path="src/test/java"/>
 	<classpathentry kind="src" path="resources"/>
+	<classpathentry kind="src" path="src/test/java/teste"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
